Data Loading and Preprocessing

--- a/IE4483.ipynb
+++ b/IE4483.ipynb
@@ -5,18 +5,33 @@
    "execution_count": null,
    "id": "6370b5fe-26e2-4e56-95b9-b3e136fc0964",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "File .\train.json does not exist",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Load training and testing data\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m train_data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_json\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;130;43;01m\\t\u001b[39;49;00m\u001b[38;5;124;43mrain.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m test_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_json(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mest.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\io\\json\\_json.py:791\u001b[0m, in \u001b[0;36mread_json\u001b[1;34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, encoding_errors, lines, chunksize, compression, nrows, storage_options, dtype_backend, engine)\u001b[0m\n\u001b[0;32m    788\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m convert_axes \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m orient \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtable\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    789\u001b[0m     convert_axes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 791\u001b[0m json_reader \u001b[38;5;241m=\u001b[39m \u001b[43mJsonReader\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    792\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpath_or_buf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    793\u001b[0m \u001b[43m    \u001b[49m\u001b[43morient\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morient\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    794\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    795\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    796\u001b[0m \u001b[43m    \u001b[49m\u001b[43mconvert_axes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconvert_axes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    797\u001b[0m \u001b[43m    \u001b[49m\u001b[43mconvert_dates\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconvert_dates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    798\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeep_default_dates\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeep_default_dates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    799\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprecise_float\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprecise_float\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    800\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdate_unit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdate_unit\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    801\u001b[0m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    802\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlines\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlines\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    803\u001b[0m \u001b[43m    \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchunksize\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    804\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcompression\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    805\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnrows\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnrows\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    806\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    807\u001b[0m \u001b[43m    \u001b[49m\u001b[43mencoding_errors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mencoding_errors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    808\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdtype_backend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype_backend\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    809\u001b[0m \u001b[43m    \u001b[49m\u001b[43mengine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    810\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    812\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize:\n\u001b[0;32m    813\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m json_reader\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\io\\json\\_json.py:904\u001b[0m, in \u001b[0;36mJsonReader.__init__\u001b[1;34m(self, filepath_or_buffer, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, lines, chunksize, compression, nrows, storage_options, encoding_errors, dtype_backend, engine)\u001b[0m\n\u001b[0;32m    902\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m filepath_or_buffer\n\u001b[0;32m    903\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mengine \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mujson\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 904\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_data_from_filepath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    905\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_preprocess_data(data)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\io\\json\\_json.py:960\u001b[0m, in \u001b[0;36mJsonReader._get_data_from_filepath\u001b[1;34m(self, filepath_or_buffer)\u001b[0m\n\u001b[0;32m    952\u001b[0m     filepath_or_buffer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles\u001b[38;5;241m.\u001b[39mhandle\n\u001b[0;32m    953\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m (\n\u001b[0;32m    954\u001b[0m     \u001b[38;5;28misinstance\u001b[39m(filepath_or_buffer, \u001b[38;5;28mstr\u001b[39m)\n\u001b[0;32m    955\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m filepath_or_buffer\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39mendswith(\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    958\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file_exists(filepath_or_buffer)\n\u001b[0;32m    959\u001b[0m ):\n\u001b[1;32m--> 960\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilepath_or_buffer\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    961\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    962\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m    963\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPassing literal json to \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mread_json\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is deprecated and \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    964\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwill be removed in a future version. To read from a \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    967\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mfind_stack_level(),\n\u001b[0;32m    968\u001b[0m     )\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: File .\train.json does not exist"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load training and testing data\n",
     "train_data = pd.read_json('train.json')\n",
-    "test_data = pd.read_json('test.json')\n"
+    "test_data = pd.read_json('test.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "73226799-bc1d-4369-a8eb-f49a957649a7",
    "metadata": {},
    "outputs": [
@@ -54,6 +69,10 @@
     "stop_words = set(stopwords.words('english'))\n",
     "punctuation = string.punctuation\n",
     "\n",
+    "# Check data shapes for consistency\n",
+    "print(\"Training data shape:\", train_data.shape) \n",
+    "print(\"Testing data shape:\", test_data.shape) \n",
+    "\n",
     "def preprocess_text(text):\n",
     "    # Lowercase the text\n",
     "    text = text.lower()\n",
@@ -66,7 +85,7 @@
     "\n",
     "# Apply preprocessing\n",
     "train_data['cleaned_text'] = train_data['review'].apply(preprocess_text)\n",
-    "test_data['cleaned_text'] = test_data['review'].apply(preprocess_text)\n"
+    "test_data['cleaned_text'] = test_data['review'].apply(preprocess_text)"
    ]
   },
   {
@@ -78,45 +97,87 @@
    "source": [
     "# For BERT Embeddings\n",
     "# tokenize the text using BERT's tokenizer, ensuring all reviews have the same length for model input.\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from transformers import BertTokenizer\n",
+    "import torch\n",
+    "from transformers import DistilBertTokenizer, DistilBertModel\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
     "\n",
-    "# Initialize tokenizer\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
     "\n",
-    "# Tokenization function\n",
-    "def tokenize_function(examples):\n",
-    "    return tokenizer(\n",
-    "        examples['review'],\n",
-    "        padding='max_length',\n",
-    "        truncation=True,\n",
-    "        max_length=128\n",
+    "# TF-IDF Feature Extraction\n",
+    "def tfidf_feature_extraction(train_texts, test_texts, max_features=5000):\n",
+    "    tfidf = TfidfVectorizer(max_features=max_features)\n",
+    "    X_train_tfidf = tfidf.fit_transform(train_texts)\n",
+    "    X_test_tfidf = tfidf.transform(test_texts)\n",
+    "    return X_train_tfidf, X_test_tfidf\n",
+    "\n",
+    "# BERT Embedding Extraction\n",
+    "tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
+    "bert_model = DistilBertModel.from_pretrained('distilbert-base-uncased')\n",
+    "\n",
+    "def get_bert_embeddings(text_list, bert_model, max_length=512):\n",
+    "    inputs = tokenizer(\n",
+    "        text_list, \n",
+    "        padding=True, \n",
+    "        truncation=True, \n",
+    "        return_tensors=\"pt\", \n",
+    "        max_length=max_length\n",
     "    )\n",
+    "    with torch.no_grad():\n",
+    "        outputs = bert_model(**inputs)\n",
+    "    return outputs.last_hidden_state.mean(dim=1)  # Mean pooling over the sequence\n",
     "\n",
-    "# Apply tokenization\n",
-    "train_data_tokens = train_data['review'].apply(lambda x: tokenizer.encode_plus(\n",
-    "    x,\n",
-    "    add_special_tokens=True,\n",
-    "    max_length=128,\n",
-    "    truncation=True,\n",
-    "    padding='max_length',\n",
-    "    return_attention_mask=True,\n",
-    "    return_tensors='pt'\n",
-    "))\n",
+    "# Choose the feature extraction method: TF-IDF or BERT\n",
+    "use_bert = False  # Set to True to use BERT embeddings, False for TF-IDF\n",
     "\n",
-    "test_data_tokens = test_data['review'].apply(lambda x: tokenizer.encode_plus(\n",
-    "    x,\n",
-    "    add_special_tokens=True,\n",
-    "    max_length=128,\n",
-    "    truncation=True,\n",
-    "    padding='max_length',\n",
-    "    return_attention_mask=True,\n",
-    "    return_tensors='pt'\n",
-    "))\n"
+    "if use_bert:\n",
+    "    print(\"Using BERT Embeddings...\")\n",
+    "    X_train = get_bert_embeddings(train_data['cleaned_text'].tolist(), bert_model)\n",
+    "    X_test = get_bert_embeddings(test_data['cleaned_text'].tolist(), bert_model)\n",
+    "else:\n",
+    "    print(\"Using TF-IDF Features...\")\n",
+    "    X_train, X_test = tfidf_feature_extraction(train_data['cleaned_text'], test_data['cleaned_text'])\n",
+    "\n",
+    "y_train = train_data['sentiments']\n",
+    "\n",
+    "# Baseline Model Implementation - Train a Logistic Regression model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Perform cross-validation to assess model performance\n",
+    "cross_val_scores = cross_val_score(model, X_train, y_train, cv=5, scoring='f1')\n",
+    "print(\"Cross-Validation F1 Scores:\", cross_val_scores)\n",
+    "print(\"Average F1 Score from Cross-Validation:\", cross_val_scores.mean())\n",
+    "\n",
+    "# Testing and Prediction - Apply the trained model to test data\n",
+    "test_predictions = model.predict(X_test)\n",
+    "\n",
+    "# Save predictions to submission.csv\n",
+    "submission = pd.DataFrame({'reviews': test_data['reviews'], 'predictions': test_predictions})\n",
+    "submission.to_csv('submission.csv', index=False)\n",
+    "\n",
+    "# Result Analysis - Evaluate the model's performance (accuracy, F1-score)\n",
+    "accuracy = accuracy_score(y_train, model.predict(X_train))\n",
+    "f1 = f1_score(y_train, model.predict(X_train), average='weighted')\n",
+    "print(f\"Training Accuracy: {accuracy}\")\n",
+    "print(f\"Training F1 Score: {f1}\")\n",
+    "\n",
+    "# Conduct sample analysis of correct and incorrect predictions\n",
+    "train_data['predictions'] = model.predict(X_train)\n",
+    "correct_samples = train_data[train_data['predictions'] == train_data['sentiments']].sample(5)\n",
+    "incorrect_samples = train_data[train_data['predictions'] != train_data['sentiments']].sample(5)\n",
+    "\n",
+    "print(\"Correct Predictions Sample:\")\n",
+    "print(correct_samples[['reviews', 'sentiments', 'predictions']])\n",
+    "print(\"\\nIncorrect Predictions Sample:\")\n",
+    "print(incorrect_samples[['reviews', 'sentiments', 'predictions']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "957e8c43-798f-4882-b648-0088c9a212dd",
    "metadata": {},
    "outputs": [],
@@ -459,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
